# rust-bitcoinconsensus

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  build.rs  justfile  rustfmt.toml  vendor-bitcoin-core.sh
.github/workflows/: rust.yml
contrib/: _test.sh  test.sh  vendor-bitcoin-core.sh
depend/: bitcoin  bitcoin-HEAD-revision.txt
depend/bitcoin/src/: serialize.h
depend/bitcoin/src/qt/locale/: bitcoin_es_CL.ts  bitcoin_fr.ts  bitcoin_sr@latin.ts  bitcoin_uz@Latn.ts  bitcoin_zh_CN.ts  bitcoin_zh_TW.ts
githooks/: pre-commit
src/: lib.rs  types.rs
