[package]
name = "bitcoinconsensus"
version = "0.19.0-1"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"

[lib]
name = "bitcoinconsensus"
path = "src/lib.rs"

[features]
external-secp = []

[dependencies]
libc="0.2"
hex = "0.4.2"
lazy_static = "1.4.0"

[build-dependencies]
cc = ">= 1.0.36, <= 1.0.41"
color-eyre = "0.5.0"
bindgen = "0.54.1"

[dev-dependencies]
rustc-serialize = "0.3"
