[package]
name = "bitcoinconsensus"
# The first part is the Bitcoin Core version, the second part is the version of this lib.
version = "0.19.0-0.4.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoinconsensus/"
repository = "https://github.com/rust-bitcoin/rust-bitcoinconsensus/"
description = "Bitcoin's libbitcoinconsensus with Rust binding."
keywords = [ "bitcoin", "bitcoinconsensus", "libbitcoinconsensus" ]
readme = "README.md"
exclude = ["/tmp/bitcoin/.github/**", "/tmp/bitcoin/.tx/**", "/tmp/bitcoin/build-aux/**", "/tmp/bitcoin/contrib/**", "/tmp/bitcoin/tmps/**", "/tmp/bitcoin/doc/**", "/tmp/bitcoin/share/**", "/tmp/bitcoin/test/**", "/tmp/bitcoin/src/bench/**", "/tmp/bitcoin/src/config/**", "/tmp/bitcoin/src/consensus/**", "/tmp/bitcoin/src/leveldb/**", "/tmp/bitcoin/src/policy/**", "/tmp/bitcoin/src/qt/**", "/tmp/bitcoin/src/rpc/**", "/tmp/bitcoin/src/support/**", "/tmp/bitcoin/src/test/**", "/tmp/bitcoin/src/univalue/**", "/tmp/bitcoin/src/wallet/**", "/tmp/bitcoin/src/zmq/**"]
build = "build.rs"
edition = "2018"

[lib]
name = "bitcoinconsensus"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
external-secp = []

[dependencies]
libc="0.2"

[build-dependencies]
cc = "1.0.28"

[dev-dependencies]
rustc-serialize = "0.3"
