[package]
name = "bitcoinconsensus"
# The first part is the crate version, the second informational part is the Bitcoin Core version.
version = "0.106.0+26.0"
authors = ["Tamas Blummer <tamas.blummer@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoinconsensus/"
repository = "https://github.com/rust-bitcoin/rust-bitcoinconsensus/"
description = "Bitcoin's libbitcoinconsensus with Rust binding."
keywords = [ "bitcoin", "bitcoinconsensus", "libbitcoinconsensus" ]
readme = "README.md"
exclude = [
        "/depend/bitcoin/.github/**",
        "/depend/bitcoin/.tx/**",
        "/depend/bitcoin/build-aux/**",
        "/depend/bitcoin/contrib/**",
        "/depend/bitcoin/depends/**",
        "/depend/bitcoin/doc/**",
        "/depend/bitcoin/share/**",
        "/depend/bitcoin/test/**",
        "/depend/bitcoin/src/bench/**",
        "/depend/bitcoin/src/config/**",
        "/depend/bitcoin/src/leveldb/**",
        "/depend/bitcoin/src/policy/**",
        "/depend/bitcoin/src/qt/**",
        "/depend/bitcoin/src/rpc/**",
        "/depend/bitcoin/src/support/**",
        "/depend/bitcoin/src/test/**",
        "/depend/bitcoin/src/univalue/**",
        "/depend/bitcoin/src/wallet/**",
        "/depend/bitcoin/src/zmq/**"
        ]
build = "build.rs"
edition = "2018"

[features]
default = ["std"]
std = []
external-secp = []

[dependencies]

[build-dependencies]
cc = "1.0.28"

[dev-dependencies]
rustc-serialize = "0.3"
